fix(backend): clean legacy getter/setter calls across services/controllers and start spring boot backend